--- a/backend/config.env
+++ b/backend/config.env
@@ -6,4 +6,7 @@ JWT_SECRET=my-very-long-and-hard-password-secret
 JWT_EXPIRES_IN=30d
 COOKIE_EXPIRES_IN=30
 
-
+MAIL_HOST="server61.web-hosting.com"
+MAIL_PORT=465
+MAIL_USER="test@roware.xyz"
+MAIL_PASSWORD="n28KI2B]]TLt"
