--- a/frontend/package.json
+++ b/frontend/package.json
@@ -50,6 +50,7 @@
     "react-phone-input-2": "^2.15.1",
     "react-phone-number-input": "^3.4.9",
     "react-slick": "^0.30.2",
+    "react-squadpay": "^1.0.9",
     "react-toastify": "^10.0.6",
     "slick-carousel": "^1.8.1",
     "swiper": "^11.1.14",
