--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,12 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.4",
     "@react-oauth/google": "^0.12.1",
+    "@react-pdf-viewer/core": "^3.12.0",
+    "@react-pdf-viewer/default-layout": "^3.12.0",
+    "@react-pdf/renderer": "^4.1.5",
+    "@supabase/supabase-js": "^2.47.10",
+    "@tanstack/react-query": "^5.62.8",
+    "@tanstack/react-query-devtools": "^5.62.8",
     "@tanstack/react-table": "^8.20.5",
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
@@ -29,6 +35,7 @@
     "countries-and-timezones": "^3.7.2",
     "country-state-city": "^3.2.1",
     "embla-carousel-react": "^8.3.1",
+    "filepond": "^4.32.5",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
     "libphonenumber-js": "^1.11.12",
@@ -37,16 +44,20 @@
     "mongoose": "^8.7.2",
     "next": "14.2.15",
     "next-auth": "^4.24.10",
+    "pdf-lib": "^1.17.1",
+    "pdfjs-dist": "^3.11.174",
     "react": "^18",
     "react-datepicker": "^7.5.0",
     "react-dom": "^18",
     "react-dropzone": "^14.3.5",
+    "react-filepond": "^7.1.3",
     "react-files": "^3.0.3",
     "react-hook-form": "^7.53.2",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
     "react-loader-spinner": "^6.1.6",
     "react-paystack": "^6.0.0",
+    "react-pdf": "^9.2.1",
     "react-phone-input-2": "^2.15.1",
     "react-phone-number-input": "^3.4.9",
     "react-slick": "^0.30.2",
