--- a/frontend/package.json
+++ b/frontend/package.json
@@ -42,13 +42,13 @@
     "lucide-react": "^0.453.0",
     "mongodb": "^6.9.0",
     "mongoose": "^8.7.2",
-    "next": "14.2.15",
+    "next": "^14.2.22",
     "next-auth": "^4.24.10",
     "pdf-lib": "^1.17.1",
     "pdfjs-dist": "^3.11.174",
-    "react": "^18",
+    "react": "^19.0.0",
     "react-datepicker": "^7.5.0",
-    "react-dom": "^18",
+    "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.5",
     "react-filepond": "^7.1.3",
     "react-files": "^3.0.3",
