--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@hookform/resolvers": "^3.9.1",
+    "@mui/x-date-pickers": "^7.23.6",
     "@radix-ui/react-accordion": "^1.2.1",
     "@radix-ui/react-checkbox": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.2",
@@ -31,6 +34,8 @@
     "clsx": "^2.1.1",
     "countries-and-timezones": "^3.7.2",
     "country-state-city": "^3.2.1",
+    "date-fns": "^2.30.0",
+    "dayjs": "^1.11.13",
     "embla-carousel-react": "^8.3.1",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
@@ -62,6 +67,7 @@
     "zustand": "^5.0.1"
   },
   "devDependencies": {
+    "@types/date-fns": "^2.6.3",
     "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
