--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,13 +12,15 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@hookform/resolvers": "^3.9.1",
-    "@mui/x-date-pickers": "^7.23.6",
+    "@mui/material": "^6.4.7",
+    "@mui/x-date-pickers": "^7.27.3",
     "@radix-ui/react-accordion": "^1.2.1",
     "@radix-ui/react-checkbox": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-popover": "^1.1.6",
     "@radix-ui/react-radio-group": "^1.2.1",
     "@radix-ui/react-scroll-area": "^1.2.0",
     "@radix-ui/react-select": "^2.1.2",
@@ -47,6 +49,7 @@
     "next-auth": "^4.24.10",
     "react": "^18",
     "react-datepicker": "^7.5.0",
+    "react-day-picker": "^9.6.1",
     "react-dom": "^18",
     "react-dropzone": "^14.3.5",
     "react-files": "^3.0.3",
@@ -71,6 +74,7 @@
     "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
+    "@types/react-day-picker": "^5.2.1",
     "@types/react-dom": "^18",
     "@typescript-eslint/eslint-plugin": "^8.14.0",
     "@typescript-eslint/parser": "^8.14.0",
