--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "react-paystack": "^6.0.0",
     "react-phone-input-2": "^2.15.1",
     "react-phone-number-input": "^3.4.9",
+    "react-select": "^5.10.2",
     "react-slick": "^0.30.2",
     "react-toastify": "^10.0.6",
     "slick-carousel": "^1.8.1",
