--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,12 +1,18 @@
 {
-  "extends": ["next/core-web-vitals", "next/typescript"],
-  "rules": {
-    "@typescript-eslint/no-unused-vars": "off",
-    "react/no-unescaped-entities": "off",
-    "@typescript-eslint/no-empty-interface": "off",
-    "@typescript-eslint/no-explicit-any": "error", // Disallow 'any' type
-    "parser": "@typescript-eslint/parser",
-    "plugins": ["@typescript-eslint"],
-    "extends": ["eslint:recommended", "plugin:@typescript-eslint/recommended"]
-  }
+    "extends":  [
+                    "next/core-web-vitals",
+                    "next/typescript",
+                    "eslint:recommended",
+                    "plugin:@typescript-eslint/recommended"
+                ],
+    "parser":  "@typescript-eslint/parser",
+    "plugins":  [
+                    "@typescript-eslint"
+                ],
+    "rules":  {
+                  "@typescript-eslint/no-unused-vars":  "off",
+                  "react/no-unescaped-entities":  "off",
+                  "@typescript-eslint/no-empty-interface":  "off",
+                  "@typescript-eslint/no-explicit-any":  "error"
+              }
 }
